<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>com.dat3m</groupId>
    <artifactId>dat3m</artifactId>
    <version>2.0.6</version>
  </parent>

  <groupId>com.dat3m.dartagnan</groupId>
  <artifactId>dartagnan</artifactId>
  <packaging>jar</packaging>

  <name>dartagnan</name>

  <dependencies>
    <dependency>
      <groupId>com.microsoft</groupId>
      <artifactId>z3</artifactId>
      <version>4.3.2</version>
    </dependency>
    <dependency>
      <groupId>org.antlr</groupId>
      <artifactId>antlr4-runtime</artifactId>
      <version>4.7.2</version>
    </dependency>
    <dependency>
      <groupId>commons-cli</groupId>
      <artifactId>commons-cli</artifactId>
      <version>1.4</version>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <forkMode>once</forkMode>
          <argLine>-Djava.library.path=${project.parent.basedir}/lib</argLine>
          <environmentVariables>
            <LD_LIBRARY_PATH>${project.parent.basedir}/lib/</LD_LIBRARY_PATH>
            <DYLD_LIBRARY_PATH>${project.parent.basedir}/lib/</DYLD_LIBRARY_PATH>
          </environmentVariables>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.antlr</groupId>
        <artifactId>antlr4-maven-plugin</artifactId>
        <version>4.7.2</version>
        <configuration>
          <listener>true</listener>
          <visitor>true</visitor>
          <libDirectory>${project.basedir}/src/main/antlr4/com/dat3m/dartagnan/parsers</libDirectory>
          <outputDirectory>${project.build.directory}/generated-sources/antlr4/com/dat3m/dartagnan/parsers</outputDirectory>
          <arguments>
            <argument>-package</argument>
            <argument>com.dat3m.dartagnan.parsers</argument>
          </arguments>
        </configuration>
        <executions>
          <execution>
            <id>antlr-generate</id>
            <phase>generate-sources</phase>
            <goals>
              <goal>antlr4</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>build-helper-maven-plugin</artifactId>
        <version>3.0.0</version>
        <executions>
          <execution>
            <id>add-source</id>
            <phase>generate-sources</phase>
            <goals>
              <goal>add-source</goal>
            </goals>
            <configuration>
              <sources>
                <source>${project.build.directory}/generated-sources/antlr4</source>
              </sources>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-assembly-plugin</artifactId>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>single</goal>
            </goals>
            <configuration>
              <archive>
                <manifest>
                    <mainClass>com.dat3m.dartagnan.Dartagnan</mainClass>
                </manifest>
              </archive>
              <descriptorRefs>
                <descriptorRef>jar-with-dependencies</descriptorRef>
              </descriptorRefs>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>10</source>
          <target>10</target>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
